版本切换至java17， 解决部分冲突问题